--- a/assets/main_1.css
+++ b/assets/main_1.css
@@ -4,24 +4,31 @@
     margin-right:auto;
 }
 
-body {
-    font-family: sans-serif;
+body, * {
+    font-family: Arial, Sans-Serif !important;
+    color: black;
+    font-weight: bold !important;
 }
 
 h1 {
     text-align:center;
     padding: 5% 0;
     text-transform: uppercase;
-    font-size: 7vw;
+    font-size: 4vw;
+}
+
+h2{
+    margin-top: 2rem;
+    margin-bottom: 5rem;
+    width: 100%;
+    text-align: center;
+    font-size: 1.5rem;
 }
 
 /* ---- grid ---- */
 .grid {
     text-align:center;
     width: 100vw;
-    min-height: 100vh;
-    align-items: center;
-    display: flex;
 }
 
 /* clearfix */
@@ -34,33 +41,19 @@ h1 {
 /* ---- grid-item ---- */
 
 .grid-item {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: center;
     margin: 2% 0;
 }
 
 .grid-item img{
-    display: flex;
-    flex-direction: column;
-    height: 50vh;
-    justify-content: center;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.grid-item h2{
-    width: 100%;
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: cover;
 }
 
 @media (max-width: 768px) {
     /* CSS */
-    .grid {
-        /* max-width: fit-content; */
-
+    h1 {
+        font-size: 10vw;
     }
     .grid-item img {
         max-width: 100vw;
